--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Roboto+Condensed&display=swap&subset=cyrillic"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/slick.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/media.css">
   </head>
   <body>
 
@@ -26,9 +26,9 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__list-item">
-            <a class="menu__list-link menu__list-link--active" href="#"
-              >О нас</a
-            >
+            <a class="menu__list-link menu__list-link--active" href="#">
+              О нас
+            </a>
           </li>
           <li class="menu__list-item">
             <a class="menu__list-link" href="#">Дома</a>
@@ -46,16 +46,16 @@
     <section class="slider">
       <div
         class="slider__item"
-        style="background-image: url(images/slider-item1.jpg)"
-      ></div>
+        style="background-image: url(images/slider-item1.jpg)">
+      </div>
       <div
         class="slider__item"
-        style="background-image: url(images/slider-item2.jpg)"
-      ></div>
+        style="background-image: url(images/slider-item2.jpg)">
+      </div>
       <div
         class="slider__item"
-        style="background-image: url(images/slider-item3.jpg)"
-      ></div>
+        style="background-image: url(images/slider-item3.jpg)">
+      </div>
     </section>
 
     <section class="search">
@@ -65,8 +65,7 @@
           <input
             class="search__form-input"
             type="text"
-            placeholder="Введите город"
-          />
+            placeholder="Введите город"/>
           <button class="search__form-btn"">Найти</button>
         </form>
       </div>
@@ -139,6 +138,135 @@
         </a>
       </div>
     </section>
+
+    <section class="about">
+      <div class="container">
+        <div class="about__inner">
+          <div class="our-managers">
+            <h4 class="our-managers__title about__title">
+              Наши менеджеры
+            </h4>
+            <div class="our-managers__items">
+              <div class="our-managers__item">
+                <img class="our-managers__img" src="images/our-managers-1.jpg" alt="">
+                <ul class="our-managers__list">
+                  <li class="our-managers__name">Макс</li>
+                  <li class="our-managers__age">30 лет</li>
+                  <li class="our-managers__location">Москва</li>
+                </ul>
+                <button class="our-managers__btn">Связаться</button>
+              </div>
+              <div class="our-managers__item">
+                <img class="our-managers__img" src="images/our-managers-2.jpg" alt="">
+                <ul class="our-managers__list">
+                  <li class="our-managers__name">Анна</li>
+                  <li class="our-managers__age">28 лет</li>
+                  <li class="our-managers__location">Киев</li>
+                </ul>
+                <button class="our-managers__btn">Связаться</button>
+              </div>
+            </div>
+          </div>
+          <div class="blog">
+            <h4 class="about__title">
+              Блог
+            </h4>
+            <ul class="blog__list">
+              <li class="blog__item">
+                <a class="blog__link" href="#">
+                  Системы охраны и видеонаблюдения
+                </a></li>
+              <li class="blog__item">
+                <a class="blog__link" href="#">
+                  Клубная недвижимость всегда в цене
+                </a></li>
+              <li class="blog__item">
+                <a class="blog__link" href="#">
+                  Все плюсы от посуточной аренды квартир
+                </a></li>
+              <li class="blog__item">
+                <a class="blog__link" href="#">
+                  Как выбрать жильё своей мечты в Киеве?
+                </a></li>
+              <li class="blog__item">
+                <a class="blog__link" href="#">
+                  Топ 10 ВИП коттеджей Лос Анджелеса
+                </a></li>
+              <li class="blog__item">
+                <a class="blog__link" href="#">
+                  Лучшие аппартаменты с панорамным видом
+                </a></li>
+              <li class="blog__item">
+                <a class="blog__link" href="#">
+                  Дома для аренды на год в Майами
+                </a></li>
+            </ul>
+          </div>
+          <div class="reviews">
+            <h4 class="about__title">
+              Отзывы
+            </h4>
+            <img class="reviews__img" src="images/reviews.jpg" alt="">
+            <p class="reviews__text">
+              Это лучший сервис по подбору аппартаментов. Пользуюсь услугами To rent уже 5 лет. Всегда идеально и именно то, что мне нужно.
+            </p>
+            <a class="reviews__link" href="#">
+              Еще отзывы
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer">
+      <div class="footer__top">
+        <div class="container">
+          <div class="footer__top-inner">
+            <nav class="footer__menu">
+              <ul class="footer__menu-list">
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    О нас
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    Дома
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    Апартаменты
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    Отзывы
+                  </a>
+                </li>
+                <li class="footer__menu-item">
+                  <a class="footer__menu-link" href="#">
+                    Контакты
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <form class="footer__form">
+              <label class="footer__form-label">
+                Связаться<br> с нами
+              </label>
+              <input class="footer__form-input" type="text" placeholder="Задать вопрос">
+              <button class="footer__form-btn" type="submit">Отправить</button>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="logo footer__logo">
+        <a class="logo__link" href="#">
+          <img class="logo__link-img" src="images/logo.svg" alt="logo" />
+        </a>
+      </div>
+    </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
